--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,9 @@
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
-
+h2 {
+  color: black;
+}
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
